--- a/weather.css
+++ b/weather.css
@@ -7,7 +7,7 @@ body{
 .banner{
    height: 100vh;
     width: 100%;
-    background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75) ) , url('https://source.unsplash.com/1600x900/?landscape') ;
+    background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75) ) ;
     background-position:center;
     background-size: cover;
 
@@ -19,7 +19,7 @@ color: white;
 background-color:#ffffff10;
 backdrop-filter: blur(12px);
 -webkit-backdrop-filter: blur(12px);
-max-width: 50%;
+max-width: 57%;
 height: auto;
 border-radius: 12px;
 font-size: 19px;
